[dcm2xml] Added example for --force-charset attribute

--- a/dcm4che-tool/dcm4che-tool-dcm2xml/src/main/resources/org/dcm4che3/tool/dcm2xml/messages.properties
+++ b/dcm4che-tool/dcm4che-tool-dcm2xml/src/main/resources/org/dcm4che3/tool/dcm2xml/messages.properties
@@ -35,6 +35,6 @@ blk-vr=specify threshold for the value length for attributes with particular VRs
   be treated as bulkdata, e.g.: --blk-vr LT,OB,OD,OF,OL,OW,UC,UN,UT=1024 - treat all attributes \
   with VR = LT or OB or OD or OF or OL or OW or UC or UN or UT which value length exceeds \
   1024 bytes as bulkdata.
-force-charset=force set charset to DICOM file parser
+force-charset=force set charset to DICOM file parser, e.g. --force-charset=windows-1251
 missing=missing file operand
 too-many=too many arguments
